# jigsaw

./: .gitignore
core/: .merlin  Ir.ml  dune  jigsaw-core.install  jigsaw-core.opam  patch_install_file.sh  types.ml
experiments/: benchmark.sh
experiments/non-extensible/: Makefile  dune  normal_datatypes.ml  polymorphic_variants.ml
experiments/open-types-functions/: all.ml  all_naive.ml  dune
experiments/open-types-functions/modular/: Makefile  arith.ml  core.ml  dune  let.ml  modular.ml  shared.ml
experiments/open-types-functions/modular-staged/: Makefile  arith.ml  arith_types.ml  cached_runnative.ml  core.ml  let.ml  let_types.ml  modular_staged.ml
experiments/open-types-functions/naive/: Makefile  arith.ml  core.ml  dune  let.ml  naive.ml
experiments/open-types-functions/naive-staged/: Makefile  arith.ml  cached_runnative.ml  core.ml  core_types.ml  custom_runnative.ml  let.ml  naive_staged.ml  naive_staged_types.ml  shared.ml
experiments/open-types-functions/single-module/: Makefile  combined.ml
experiments/polymoprhic-variants/: all.ml  core.ml  dune  multimodule.ml
experiments/polymoprhic-variants/modular/: Makefile  arith.ml  core.ml  dune  let.ml  modular.ml  shared.ml
extensions/: query3.ml
extensions/jigsaw-let/: .merlin  dune  jigsaw-let.install  jigsaw-let.opam  let.ml
extensions/jigsaw-query/: .merlin  dune  jigsaw-query.install  jigsaw-query.opam  query.ml  query2.ml
features/jigsaw-stringify-feature/: dune  jigsaw-stringify.opam  patch_install_file.sh  stringify.ml
features/jigsaw-stringify-for-let/: .merlin  dune  jigsaw-stringify-let.install  jigsaw-stringify-let.opam  stringify_for_let.ml
features/jigsaw-stringify-for-query/: .merlin  dune  jigsaw-stringify-query.install  jigsaw-stringify-query.opam  stringify_for_query.ml
main/: .merlin  dune  jigsaw.install  jigsaw.ml  jigsaw.opam
ppx/: dune  jigsaw-ppx.install  jigsaw-ppx.opam
ppx/analysis/: analysis.ml  analysis_registration.ml  analysis_results.ml  analysis_stage_one.ml  analysis_stage_two.ml  checks.ml  context.ml  dune  feature_declarations.ml  feature_implementations.ml  features.ml  injection_functors.ml  type_equality.ml  types.ml
ppx/shared/: .merlin  analysis_data.ml  ast_manipulation.ml  ast_versioning.ml  dune  errors.ml  names.ml  payload_manipulation.ml  persisting.ml  utils.ml  yojson_implementations.ml
ppx/synthesis/: custom_driver.ml  dune  dune_disabled  metaquot_versioning.ml  run_analysis.ml  synthesis.ml
ppx/tests/: dune  run_analysis.sh  run_synthesis.sh  test_analysis.ml  test_synthesis.ml
(+4 files in other folders)
