(library
 (name        jigsaw_ppx_analysis)
 (public_name jigsaw-ppx.analysis)
 (modules Analysis)
 (libraries ocaml-migrate-parsetree jigsaw-ppx.shared))



(library
 (name        jigsaw_ppx_analysis_rewriter)
 (public_name jigsaw-ppx.analysis-rewriter)
 (modules Analysis_registration)
 (kind ppx_rewriter)
 (libraries ocaml-migrate-parsetree jigsaw-ppx.analysis))