(library
 (name        test_analysis)
 (public_name jigsaw-ppx.test-analysis)
 (modules Test_analysis)
 (ppx_runtime_libraries jigsaw-ppx.analysis)
 (preprocess (pps jigsaw-ppx.analysis-rewriter ppx_deriving.std ))
 (libraries ))


  (library
 (name        test_synthesis)
 (public_name jigsaw-ppx.test-synthesis)
 (modules Test_synthesis)
 (ppx_runtime_libraries jigsaw-ppx.analysis)
 (preprocess (pps jigsaw-ppx.synthesis-rewriter ppx_deriving.std ))
 (libraries test_analysis))